# Rozbirnyk

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  PROJECT_CONTEXT.md  README.md  TASKS.md  docker-compose.yaml  pyproject.toml
.codex/: config.toml
.github/skills/code-documentation/: SKILL.md
.github/workflows/: ci.yml
apps/agent_service/: .env.example  Dockerfile  config.toml  pyproject.toml
apps/agent_service/src/agent_service/: main.py  models.py  run_manager.py  schema.py
apps/agent_service/src/agent_service/agents/: __init__.py  base.py  world_builder.py
apps/agent_service/src/agent_service/mcp/: __init__.py  adapter.py  client.py  manager.py
apps/agent_service/src/agent_service/models/: __init__.py  bedrock.py
apps/agent_service/src/agent_service/prompts/: __init__.py  world_builder.py
apps/agent_service/src/agent_service/schemas/: __init__.py  state.py
apps/agent_service/src/agent_service/services/: __init__.py  llm.py
apps/agent_service/src/agent_service/tools/: __init__.py  bindings.py  discovery.py  registry.py  roles.py  wrappers.py
apps/agent_service/src/agent_service/world_builder/: __init__.py  graph.py
apps/agent_service/tests/agent_service/: test_agent_service_main.py  test_schema.py
apps/agent_service/tests/agent_service/agents/: test_world_builder.py
apps/agent_service/tests/agent_service/mcp/: test_adapter.py  test_client.py  test_manager.py
apps/agent_service/tests/agent_service/models/: test_bedrock.py
apps/agent_service/tests/agent_service/services/: test_llm.py
apps/agent_service/tests/agent_service/tools/: test_discovery.py  test_registry.py
apps/agent_service/tests/agent_service/world_builder/: test_graph.py
apps/agentic_system/: Dockerfile  pyproject.toml
apps/backend/: .env.example  Dockerfile  config.toml  pyproject.toml
apps/backend/src/backend/: main.py  models.py  schema.py
apps/backend/tests/backend/: test_backend_main.py
apps/frontend/: .env.example  Dockerfile  config.toml  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
apps/frontend/src/: App.tsx  api.ts  lib.ts  styles.css  types.ts
apps/ui/: Dockerfile  pyproject.toml
docs/: VISION.md  run-project.md
docs/adr/: ADR_001_news_service.md  ADR_002_logging.md  ADR_003_config.md  ADR_004_caching.md  ADR_005_world_wiki.md  ADR_006_world_builder.md  ADR_007_actors.md  ADR_008_simulation_orchestrator.md  ADR_009_report_agent.md  ADR_010_backend_session_api.md  ADR_011_agent_service_world_builder_runtime.md  ADR_012_frontend_live_progress_ui.md
docs/diagrams/: agent_flow.md  architecture.md  configuration.md  deployment.md  mcp_interactions.md  observability.md  simulation_pipeline.md  system_context.md  testing_ci.md  world_wiki_data_model.md
docs/problems/: README.md
docs/problems/backlog/: bedrock-throttling-regression.md  runtime-log-hygiene-and-correlation-gaps.md  world-builder-events-polling-noise.md
docs/problems/resolved/: bedrock-rate-limits.md  docker-build-slow-rebuilds.md  docker-compose-clean-startup.md  startup-config-validation.md
docs/tasks/: README.md
docs/tasks/backlog/: 019-simplify-session-ui-and-add-markdown-file-browser.md
docs/tasks/done/: 007-remove-local-efk-observability-stack.md  008-add-env-example-files-for-local-setup.md  009-harden-local-startup-and-bedrock-defaults.md  010-refresh-frontend-to-white-theme-and-add-langsmith-tracing.md  011-refresh-architecture-documentation-and-diagrams.md  012-simplify-docker-compose-startup.md  013-harden-docker-startup-and-local-env-parity.md  014-add-tracked-problem-records.md  015-resolve-docker-compose-clean-startup.md  (+3 more)
mcp_servers/knowledge_service/: Dockerfile  config.toml  pyproject.toml
mcp_servers/news_service/: .env.example  Dockerfile  config.toml  pyproject.toml
mcp_servers/news_service/src/news_service/: main.py  schema.py
mcp_servers/news_service/src/tests/news_service/: test_main.py
mcp_servers/news_service/tests/news_service/: test_news_config.py
mcp_servers/opinion_service/: Dockerfile  config.toml  pyproject.toml
mcp_servers/probability_service/: Dockerfile  config.toml  pyproject.toml
mcp_servers/wiki_service/: .env.example  Dockerfile  config.toml  pyproject.toml
mcp_servers/wiki_service/src/wiki_service/: __init__.py  main.py  manager.py  models.py  schema.py
mcp_servers/wiki_service/tests/wiki_service/: test_main.py  test_wiki_manager.py
(+9 files in other folders)
