[project]
name = "rozbirnyk"
version = "0.1.0"
description = "Rozbirnyk - multi-agent AI system that creates polytical forecasts based on news, probability websites, opinions from social media and knowledge from books."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.uv.workspace]
members = [
    "apps/agentic_system",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "pre-commit",
    "pytest"
]

[tool.ruff]
line-length = 88

[tool.mypy]
strict = true