[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rozbirnyk_agent_service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "langchain-aws>=1.1.0",
    "langchain-core>=1.3.0",
    "langchain-mcp-adapters>=0.2.2",
    "langgraph>=1.1.5",
    "langsmith>=0.7.34",
    "mcp>=1.27.0",
    "rozbirnyk_common",
    "uvicorn>=0.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agent_service"]

[tool.uv.sources]
rozbirnyk_common = { workspace = true }
