[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rozbirnyk_backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "rozbirnyk_common",
    "uvicorn>=0.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.uv.sources]
rozbirnyk_common = { workspace = true }
