[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rozbirnyk_wiki_service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "fastmcp>=3.2.4",
    "rozbirnyk_common",
    "uvicorn>=0.38.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_service"]

[tool.uv.sources]
rozbirnyk_common = { workspace = true }
